# mcp-server-jupyter

./: README.md  pyproject.toml
src/mcp-server-jupyter/: notebook_manager.py
src/mcp_server_jupyter/: notebook.py  notebook_cell.py  notebook_manager.py  server.py
