[project]
name = "jupyter-mcp-server"
version = "0.1.0"
description = "MCP server for Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_mcp_server"]
